fix(Header): make title look nice on small screens

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -13,6 +13,8 @@
     line-height: 1;
     font-size: 20px;
     margin: auto;
+    text-wrap: balance;
+    text-align: center;
   }
 
   &__description {
